# agentic-ai-chatbot-mcp

./: agent_runner.py  main.py  pyproject.toml
app/: api.py  main.py
app/agent/: graph.py  memory.py  prompt.py
app/mcp/: client.py  server.py
app/tools/: calculator.py  weather.py
static/: index.html
